# Relay_context

./: .coverage  .gitignore  CHANGES_PHASE1.md  CHANGES_PHASE2.md  IMPROVEMENTS_SUMMARY.md  IMPROVEMENT_PLAN.md  LICENSE  README.md  SYSTEM_PROMPT_LANDING_PAGE.md  VISUALIZATION_GUIDE.md  context_observatory.py  coverage.json  plan.py  pyproject.toml  requirements.txt
docs/: USER_GUIDE.md  index.html
docs/assets/: README.md
examples/: example.py  run_demo.py
src/context_handover/: __init__.py  session.py
src/context_handover.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/context_handover/code_analysis/: __init__.py  code_utils.py
src/context_handover/core/: __init__.py  atoms.py  budget.py  checkpoint.py  registry.py
src/context_handover/extraction/: __init__.py  extraction.py
src/context_handover/instrumentation/: __init__.py  langfuse_integration.py  otel_instrumentation.py
src/context_handover/measurement/: __init__.py  drift.py  ledger.py  verification.py
src/context_handover/pipeline/: __init__.py  dlq.py  pipeline.py  retry_policy.py  trace_context.py
src/context_handover/storage/: __init__.py  vector_store.py
tests/: test_budget_knapsack.py  test_core.py  test_drift.py  test_vector_store.py
